--- a/Booking_System.html
+++ b/Booking_System.html
@@ -76,7 +76,7 @@
                     <!-- Butang -->
                     <div class="form-btn mt-6">
                         <button class="submit-btn" type="submit">
-                            HANTAR REKOD PINJAMAN KE GOOGLE SHEET
+                            HANTAR REKOD PINJAMAN
                         </button>
                     </div>
 
