perubahan semua file

--- a/Booking_System.html
+++ b/Booking_System.html
@@ -62,12 +62,12 @@
                             </div>
                             <div class="form-group flex gap-3">
                                 <div class="w-1/2">
-                                    <span class="form-label">Tarikh Keluar</span>
-                                    <input class="form-control" type="date" name="TarikhKeluar" required>
+                                    <span class="form-label">Tarikh Ambil</span>
+                                    <input class="form-control" type="date" name="TarikhAmbil" required>
                                 </div>
                                 <div class="w-1/2">
-                                    <span class="form-label">Masa Keluar</span>
-                                    <input class="form-control" type="time" name="MasaKeluar" required>
+                                    <span class="form-label">Masa Ambil</span>
+                                    <input class="form-control" type="time" name="MasaAmbil" required>
                                 </div>
                             </div>
                         </div>
