black word fonts

--- a/Booking_System.html
+++ b/Booking_System.html
@@ -16,7 +16,7 @@
                     <h1 class="text-5xl font-extrabold text-yellow-500 uppercase tracking-wider">
                         DRONE ASSET MONITORING
                     </h1>
-                    <p class="text-gray-400 mt-2 text-sm">
+                    <p class="text-black-400 mt-2 text-sm">
                         Sistem Pinjaman dan Pengembalian Drone
                     </p>
                 </div>
