--- a/Booking_System.html
+++ b/Booking_System.html
@@ -11,83 +11,100 @@
 <body class="bg-gray-900">
     <div id="app-container" class="relative min-h-screen flex items-center p-4">
         <div class="section-center w-full max-w-7xl mx-auto">
-            <div class="booking-form mx-auto">
-                <div class="form-header text-center mb-8">
-                    <h1 class="text-5xl font-extrabold text-yellow-500 uppercase tracking-wider">
-                        DRONE ASSET MONITORING
-                    </h1>
-                    <p class="text-black-400 mt-2 text-sm">
-                        Sistem Pinjaman dan Pengembalian Drone
-                    </p>
-                </div>
 
-                <!-- BORANG PINJAMAN -->
-                <form id="booking-form">
-                    <div class="form-row">
-                        <!-- Kiri -->
-                        <div class="form-column">
-                            <div class="form-group">
-                                <span class="form-label">Nama Peminjam</span>
-                                <input class="form-control" type="text" name="NamaPeminjam" placeholder="Masukkan Nama Anda" required>
-                            </div>
-                            <div class="form-group">
-                                <span class="form-label">Site Anda</span>
-                                <select class="form-control" name="LokasiKerja" required>
-                                    <option value="" disabled selected>Pilih Lokasi Anda</option>
-                                    <option>HQ</option>
-                                    <option>ROM - MELAKA</option>
-                                    <option>RONJ - JOHOR</option>
-                                    <option>ROMNS - NEGERI SEMBILAN</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <span class="form-label">Model Drone (Pilih ID )</span>
-                                <select class="form-control" name="DroneID" required>
-                                    <option value="" disabled selected> SN / Pilih Model Drone</option>
-                                    <option value="SN-001">(SN-001) DJI Matrice 4T</option>
-                                    <option value="SN-002">(SN-002) DJI Phantom 4 Pro</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <!-- Kanan -->
-                        <div class="form-column">
-                            <div class="form-group">
-                                <span class="form-label">Tujuan Misi</span>
-                                <input class="form-control" type="text" name="TujuanMisi" placeholder="Cth: Pemeriksaan Gutter" required>
-                            </div>
-                            <div class="form-group">
-                                <span class="form-label">Destinasi Penerbangan</span>
-                                <input class="form-control" type="text" name="Destinasi" placeholder="Cth: Hospital Tuanku Jaafar" required>
-                            </div>
-                            <div class="form-group flex gap-3">
-                                <div class="w-1/2">
-                                    <span class="form-label">Tarikh Ambil</span>
-                                    <input class="form-control" type="date" name="TarikhAmbil" required>
-                                </div>
-                                <div class="w-1/2">
-                                    <span class="form-label">Masa Ambil</span>
-                                    <input class="form-control" type="time" name="MasaAmbil" required>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Butang -->
-                    <div class="form-btn mt-6">
-                        <button class="submit-btn" type="submit">
-                            HANTAR REKOD PINJAMAN
-                        </button>
-                    </div>
-
-                    <!-- Mesej Status -->
-                    <div id="booking-message" class="mt-3 text-center text-sm font-bold"></div>
-                </form>
+            <!-- ✅ TAB BUTTONS -->
+            <div class="flex justify-center mb-6 text-white">
+                <button class="nav-btn" id="tab-booking">BORANG PINJAMAN</button>
+                <button class="nav-btn" id="tab-status">STATUS DRONE</button>
             </div>
+
+            <!-- ✅ TAB 1 — BORANG PINJAMAN -->
+            <div id="tab-booking-content" class="tab-content active">
+                <div class="booking-form mx-auto">
+                    <div class="form-header text-center mb-8">
+                        <h1 class="text-5xl font-extrabold text-yellow-500 uppercase tracking-wider">
+                            DRONE ASSET MONITORING
+                        </h1>
+                        <p class="text-gray-400 mt-2 text-sm">
+                            Sistem Pinjaman dan Pengembalian Drone
+                        </p>
+                    </div>
+
+                    <form id="booking-form">
+                        <div class="form-row">
+                            <!-- Kiri -->
+                            <div class="form-column">
+                                <div class="form-group">
+                                    <span class="form-label">Nama Peminjam</span>
+                                    <input class="form-control" type="text" name="NamaPeminjam" placeholder="Masukkan Nama Anda" required>
+                                </div>
+                                <div class="form-group">
+                                    <span class="form-label">Site Anda</span>
+                                    <select class="form-control" name="LokasiKerja" required>
+                                        <option value="" disabled selected>Pilih Lokasi Anda</option>
+                                        <option>HQ</option>
+                                        <option>ROM - MELAKA</option>
+                                        <option>RONJ - JOHOR</option>
+                                        <option>ROMNS - NEGERI SEMBILAN</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <span class="form-label">Model Drone (Pilih ID )</span>
+                                    <select class="form-control" name="DroneID" required>
+                                        <option value="" disabled selected> SN / Pilih Model Drone</option>
+                                        <option value="SN-001">(SN-001) DJI Matrice 4T</option>
+                                        <option value="SN-002">(SN-002) DJI Phantom 4 Pro</option>
+                                    </select>
+                                </div>
+                            </div>
+
+                            <!-- Kanan -->
+                            <div class="form-column">
+                                <div class="form-group">
+                                    <span class="form-label">Tujuan Misi</span>
+                                    <input class="form-control" type="text" name="TujuanMisi" placeholder="Cth: Pemeriksaan Gutter" required>
+                                </div>
+                                <div class="form-group">
+                                    <span class="form-label">Destinasi Penerbangan</span>
+                                    <input class="form-control" type="text" name="Destinasi" placeholder="Cth: Hospital Tuanku Jaafar" required>
+                                </div>
+                                <div class="form-group flex gap-3">
+                                    <div class="w-1/2">
+                                        <span class="form-label">Tarikh Ambil</span>
+                                        <input class="form-control" type="date" name="TarikhAmbil" required>
+                                    </div>
+                                    <div class="w-1/2">
+                                        <span class="form-label">Masa Ambil</span>
+                                        <input class="form-control" type="time" name="MasaAmbil" required>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Butang -->
+                        <div class="form-btn mt-6">
+                            <button class="submit-btn" type="submit">
+                                HANTAR REKOD PINJAMAN
+                            </button>
+                        </div>
+
+                        <!-- Mesej Status -->
+                        <div id="booking-message" class="mt-3 text-center text-sm font-bold"></div>
+                    </form>
+                </div>
+            </div>
+
+            <!-- ✅ TAB 2 — STATUS DRONE -->
+            <div id="tab-status-content" class="tab-content">
+                <div class="dashboard-card mx-auto">
+                    <h2 class="text-3xl font-extrabold text-yellow-500 text-center mb-4">STATUS PINJAMAN DRONE</h2>
+                    <div id="status-container" class="grid gap-4"></div>
+                </div>
+            </div>
+
         </div>
     </div>
 
-    <!-- JavaScript luaran -->
     <script src="script.js"></script>
 </body>
 </html>
