--- a/Booking_System.html
+++ b/Booking_System.html
@@ -49,11 +49,11 @@
                                     </select>
                                 </div>
                                 <div class="form-group">
-                                    <span class="form-label">Model Drone (Pilih ID )</span>
+                                    <span class="form-label">Model Drone</span>
                                     <select class="form-control" name="DroneID" required>
                                         <option value="" disabled selected> SN / Pilih Model Drone</option>
-                                        <option value="SN-001">(SN-001) DJI Matrice 4T</option>
-                                        <option value="SN-002">(SN-002) DJI Phantom 4 Pro</option>
+                                        <option value="SN-001">DJI Matrice 4T</option>
+                                        <option value="SN-002">DJI Phantom 4 Pro</option>
                                     </select>
                                 </div>
                             </div>
