link app script

--- a/Booking_System.html
+++ b/Booking_System.html
@@ -51,9 +51,9 @@
                                 <div class="form-group">
                                     <span class="form-label">Model Drone</span>
                                     <select class="form-control" name="DroneID" required>
-                                        <option value="" disabled selected> SN / Pilih Model Drone</option>
-                                        <option value="SN-001">DJI Matrice 4T</option>
-                                        <option value="SN-002">DJI Phantom 4 Pro</option>
+                                        <option value="" disabled selected> Pilih Model Drone</option>
+                                        <option value="Matrice 4T">DJI Matrice 4T</option>
+                                        <option value="Phantom 4Pro">DJI Phantom 4 Pro</option>
                                     </select>
                                 </div>
                             </div>
