--- a/Booking_System.html
+++ b/Booking_System.html
@@ -50,7 +50,7 @@
                                 </div>
                                 <div class="form-group">
                                     <span class="form-label">Model Drone</span>
-                                    <select class="form-control" name="DroneID" required>
+                                    <select class="form-control" name="DroneModel" required>
                                         <option value="" disabled selected> Pilih Model Drone</option>
                                         <option value="Matrice 4T">DJI Matrice 4T</option>
                                         <option value="Phantom 4Pro">DJI Phantom 4 Pro</option>
