--- a/Booking_System.html
+++ b/Booking_System.html
@@ -98,7 +98,7 @@
             <div id="tab-status-content" class="tab-content">
                 <div class="dashboard-card mx-auto">
                     <h2 class="text-3xl font-extrabold text-yellow-500 text-center mb-4">STATUS PINJAMAN DRONE</h2>
-                    <div id="status-container" class="grid gap-4"></div>
+                    <div id="status-container" class="grid gap-4 max-h-[1000px] overflow-y-auto pr-2"></div>
                 </div>
             </div>
 
