--- a/Booking_System.html
+++ b/Booking_System.html
@@ -39,13 +39,36 @@
                                     <input class="form-control" type="text" name="NamaPeminjam" placeholder="Masukkan Nama Anda" required>
                                 </div>
                                 <div class="form-group">
-                                    <span class="form-label">Site Anda</span>
-                                    <select class="form-control" name="LokasiKerja" required>
+                                    <span class="form-label">Site (Peminjam)</span>
+                                    <select class="form-control" name="SitePeminjam" required>
                                         <option value="" disabled selected>Pilih Lokasi Anda</option>
                                         <option>HQ</option>
-                                        <option>ROM - MELAKA</option>
-                                        <option>RONJ - JOHOR</option>
-                                        <option>ROMNS - NEGERI SEMBILAN</option>
+                                        <option>MSB - BRI</option>
+                                        <option>MSB - OFFICE ROMS</option>
+                                        <option>MSB - OFFICE RONS</option>
+                                        <option>MSB - OFFICE RONJ</option>
+                                        <option>MSB - HSA</option>
+                                        <option>MSB - MKA</option>
+                                        <option>MSB - HTJ</option>
+                                        <option>MSB - KTG</option>
+                                        <option>MSB - HSI</option>
+                                        <option>MSB - PER</option>
+                                        <option>MSB - MKJ</option>
+                                        <option>MSB - AGJ</option>
+                                        <option>MSB - TGK</option>
+                                        <option>MSB - MER</option>
+                                        <option>MSB - JLB</option>
+                                        <option>MSB - JMP</option>
+                                        <option>MSB - PON</option>
+                                        <option>MSB - KUL</option>
+                                        <option>MSB - JSN</option>
+                                        <option>MSB - KLN</option>
+                                        <option>MSB - BPH</option>
+                                        <option>MSB - PDX</option>
+                                        <option>MSB - MUR</option>
+                                        <option>MSB - SGT</option>
+                                        <option>MSB - TMP</option>
+                                        <option>MSB - KPL</option>
                                     </select>
                                 </div>
                                 <div class="form-group">
@@ -53,7 +76,7 @@
                                     <select class="form-control" name="DroneModel" required>
                                         <option value="" disabled selected> Pilih Model Drone</option>
                                         <option value="Matrice 4T">DJI Matrice 4T</option>
-                                        <option value="Phantom 4Pro">DJI Phantom 4 Pro</option>
+                                        <option value="Phantom 4 Pro">DJI Phantom 4 Pro</option>
                                     </select>
                                 </div>
                             </div>
@@ -61,12 +84,12 @@
                             <!-- Kanan -->
                             <div class="form-column">
                                 <div class="form-group">
-                                    <span class="form-label">Tujuan Misi</span>
-                                    <input class="form-control" type="text" name="TujuanMisi" placeholder="Cth: Pemeriksaan Gutter" required>
+                                    <span class="form-label">Tujuan Penerbangan</span>
+                                    <input class="form-control" type="text" name="TujuanPenerbangan" placeholder="Cth: Pemeriksaan Gutter" required>
                                 </div>
                                 <div class="form-group">
-                                    <span class="form-label">Destinasi Penerbangan</span>
-                                    <input class="form-control" type="text" name="Destinasi" placeholder="Cth: Hospital Tuanku Jaafar" required>
+                                    <span class="form-label">Lokasi Penerbangan</span>
+                                    <input class="form-control" type="text" name="LokasiPenerbangan" placeholder="Cth: Hospital Tuanku Jaafar" required>
                                 </div>
                                 <div class="form-group flex gap-3">
                                     <div class="w-1/2">
